--- a/assets/video_quality_menu.css
+++ b/assets/video_quality_menu.css
@@ -21,6 +21,7 @@
   padding: 0;
 }
 .video-quality-menu li {
+  list-style: none;
   padding: 0.5em 1.5em 0.5em 2.5em;
   cursor: pointer;
   position: relative;
@@ -77,5 +78,6 @@
 }
 
 .video-quality-menu .submenu li {
+  list-style: none;
   padding: 0.5em 1.5em 0.5em 2.5em;
 }
