--- a/assets/style.css
+++ b/assets/style.css
@@ -269,12 +269,18 @@
             color: #4ade80;
         }
         .no-video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
             color: #aaa;
             font-size: 1.2em;
-            min-height: 320px;
+            background: rgba(0, 0, 0, 0.1);
+            z-index: 1;
         }
         .video-hint {
             text-align: center;
